bug fix [imagem da capa]

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<div class="container">
 		<h1>Z B T &nbsp; L O - F I</h1>
-		<img src="capa01.png">
+		<img src="Capa01.png">
 		<input id="range" class="level" type="range" value="0" min="0">
 		<div id="tempo">0</div>
 		<div class="buttons">
